improve API responses and project configuration